Add LM Studio inference support and tests
Introduces LMStudioInference to support LM Studio models via the lmstudio-python SDK, including configuration for remote hosts, context length, and GPU offload. Updates the model factory, environment example, requirements, and test suite to include LM Studio, and adds comprehensive unit tests for the new inference class.

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,9 @@ GOOGLE_API_KEY=your-google-api-key-here
 # Ollama Configuration
 OLLAMA_URL=http://localhost:11434
 
+# LM Studio Configuration
+LMSTUDIO_HOST=localhost:1234
+
 # AWS Bedrock Configuration
 AWS_PROFILE=your-aws-profile-name
 AWS_REGION=us-east-1
